--- a/legacy.tex
+++ b/legacy.tex
@@ -106,11 +106,11 @@ Finally, we investigate how these variants have impacted modern genomics analyse
 Mutation spectrum of the 1034 variants that associated with $Q$ in the JPT($p < 10^{-6}$), compared to a random set of SNPs.
 The majority of the variants with significant associations to $Q$ have the *AC${\rightarrow}$*CC mutational pattern. There is also a slight enrichment in GA*${\rightarrow}$GG* and GC*${\rightarrow}$GG* mutations. These three enrichments can be summarized as G**${\rightarrow}$GG*. \textbf{B} 
 Joint frequency spectrum plot of the Japanese from the 1kGP and a more recent Nagahama dataset \sgcomment{Citation? That will be discussed in more detail elsewhere?}.
-Crosses ( + ) are variants that reached genome wide significance in a GWAS of sequencing quality. 
+Crosses $(+)$ are variants that associate with $Q$ in the JPT. 
 The histogram on the left of the plot is the distribution of significant variants. 
 \textbf{C} 
 Genome wide association of the average quality of mapped bases $Q$ for the 104 Japanese individuals included in the 1kGP. This GWAS identified $587\ \  p < 10^{-8}$ and $1034\ \ p < 10^{-6}$ SNPs that were associated to the average $Q$ of SNPs mapped for an individual
-The same analysis was performed independently for each of the populations in the 1kGP. }
+The same analysis was performed independently for each of the populations in the 1kGP.  \sgcomment{Label axes!}}
  \label{SFS}
 \end{figure}
 
@@ -133,7 +133,7 @@ Thus, sequences called from low-$Q$ data contain variants that reproduce poorly 
 \begin{figure}
 \includegraphics[width=0.95\hsize,keepaspectratio]{./Figures/MapQualOverTime.jpg}
 
-\caption{\textbf{A} The average quality of mapped bases $Q$ for each individual per population included in the 1000 Genomes sequencing project. Individuals are ranked by the date of the earliest sequencing data is used for individuals sequenced more than once. The x-axis is ranked by the mean sequencing date per population. \textbf{B} The x-axis is sorted by the sequencing date per individual. The colours indicate the sequencing centres that produced the data for each individual and the shape indicates whether the individual belongs to Phase 1 or Phase 3 of the 1000 Genomes project. The bottom plot indicates the sequencing technologies used over time.}
+\caption{\textbf{A} The average quality of mapped bases $Q$ for each individual per population included in the 1000 Genomes sequencing project. Individuals are ranked by the date of the earliest sequencing data is used for individuals sequenced more than once. The x-axis is ranked by the mean sequencing date per population. \sgcomment{Not sure that I understand last 2 sentences. What it looks like to me: Populations are ranked by mean sequencing date (the earliest sequencing date was used for individuals with multiple dates).}. \textbf{B} The x-axis is sorted by the sequencing date per individual. The colours indicate the sequencing centres that produced the data for each individual and the shape indicates whether the individual belongs to Phase 1 or Phase 3 of the 1000 Genomes project. The bottom plot indicates the sequencing technologies used over time.}
 \label{MapQual}
 \end{figure}
 
@@ -177,9 +177,8 @@ Lists of suspicious variants and individuals with low $Q$ are provided as supple
 {INDEL} & 509 & 1,571 \\ \hline
 \end{tabular}
 \caption{Number of statistically significant variants per category. 
-Variants that are flagged by the 1kGP nested repeat mask file were analyzed separately. 
-SNPs and INDELs were also analyzed separately. 
-The total number of 24,390 are statistically significantly associated to $Q$.}
+Variants that are flagged by the 1kGP nested repeat mask file were analyzed separately. SNPs and INDELs were also analyzed separately.  \sgcomment{All four variant categories were subjected to a distinct FDR estimation.?}
+The total number of 24,390 are statistically significantly associated to $Q$. \sgcomment{Have sums in table?}}
 \label{sigTable}
 \end{table}
 
@@ -187,12 +186,12 @@ The total number of 24,390 are statistically significantly associated to $Q$.}
 \includegraphics[width=\hsize,keepaspectratio]{./Figures/SNPOverlap6.jpg}
 
 \caption{Variants associated with average quality of mapped bases $Q$ in more than one population.
-The size of the crosses ( + ) are proportional to the -log10(p) value of that SNP.
+The size of the crosses ( + ) \sgcomment{I don't see crosses} are proportional to the -log10(p) value of that SNP.
 The x axis is ranked by the frequency of occurrence of a SNP, then by genomic position.
 Phase 1 populations are marked by a star ( * ).
 The line plot underneath shows the number of populations for which a variant has reached significance.
 The populations that tend to have the most individuals with low $Q$ also tend to have the most variants associated to $Q$. 
-The same variants identified as being low quality independently in each population are found in other populations. }
+The same variants identified as being low quality independently in each population are found in other populations. \sgcomment{What does this last sentence mean??}}
   \label{OverLap}
 \end{figure}
 
@@ -241,7 +240,7 @@ However, three studies reported on SNPs with strong bias. One such study reports
 
 \begin{table}[h]
 \begin{tabular}{l l l r r r}
-  {Pubmed ID}  & {Journal} & {rsID} & \multicolumn{1}{p{1cm}}{\centering GWAS \\ -$\log_{10} p$} & \multicolumn{1}{p{1.5cm}}{\centering $Q$ -$\log_{10} p$\\(adjusted)}      \\ \hline
+  {Pubmed ID}  & {Journal} & {rsID} & \multicolumn{1}{p{1cm}}{\centering GWAS \\ -$\log_{10} p$} & \multicolumn{1}{p{1.5cm}}{\centering $Q$\\-$\log_{10} p$\\(adjusted)}      \\ \hline
 28654678 & PLoS One & rs201761909 & 5.7 & 78.11\\
 	& 	&  	rs201130852 & 5.05 & 72.28\\
 	& 	&  	rs201255786 & 5.7 & 68.97\\
@@ -270,7 +269,7 @@ However, three studies reported on SNPs with strong bias. One such study reports
 
  \hline
 \end{tabular}
-\caption{A list of recent publications that reported suspicious variants as close to or above the genome-wide significant threshold. The variants reaching genome wide significance have a star ( * ). Note : with a FDR ($\alpha = 0.01$) p-value adjustment, values of $ p > -\log_{10}(\alpha)$ are deemed statistically significant. The black text colour indicates that this variant may be spurious, grey text colour indicates that these variants are likely correct but may be impacted by a calling bias.}
+\caption{A list of recent publications that reported suspicious variants as close to or above the genome-wide significant threshold. The variants reaching genome wide significance have a star ( * ). The black text colour indicates that this variant may be spurious, grey text colour indicates that these variants are likely correct but may be impacted by a calling bias. \sgcomment{This is not what the color indicates! Give the criterion first, interpretation afterwards!}}
 \label{gwasTable}
 \end{table}
 
@@ -316,7 +315,7 @@ The submission dates and sequencing centres for each sample in the analysis was 
 \subsection{Code and data availability}
 For more details regarding data processing or figure plotting, our pipelines and R Notebooks are publicly available \href{https://github.com/LukeAndersonTrocme/QualityPaper}{here}.
 
-Index of BAS files \href{http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/data_collections/1000_genomes_project/1000genomes.low_coverage.GRCh38DH.alignment.index}{available here}.
+Index of BAS files \href{http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/data_collections/1000_genomes_project/1000genomes.low_coverage.GRCh38DH.alignment.index}{available here}. \sgcomment{I don't know if you can have "here" hyperlinks in papers?}
 
 Phase3 analysis sequence index file  \href{http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase3/20130502.phase3.analysis.sequence.index}{available here} 
 
@@ -335,7 +334,7 @@ For the reverse GWAS, the only filtration used was the application of an minor a
 {SNP}  & 6,312,620 & 19,846,786   \\  
 {INDEL} &  586,342  & 1,770,315 \\ \hline
 \end{tabular}
-\caption{Number of variants included in the analysis by category}
+\caption{Number of variants included in the analysis by category \sgcomment{Include in Table 1?}}
 \label{totTable}
 \end{table}
 
@@ -401,18 +400,19 @@ We would like to thank Kelly Harris for sharing her mutation spectrum scripts.
 
 \clearpage
 \section{Supplementary Figures}
+\renewcommand{\thefigure}{S\arabic{figure}}
+\setcounter{figure}{0}   	
 
 \begin{figure}[h]
 \centering
 \includegraphics[width=15cm,keepaspectratio]{./Figures/fits_Significant_Positions_CompareModels.jpg}
 \caption{Comparison of three logistic regression models for testing association to $Q$.
 These methods model each genotype as a logistic function using principal components (PC), Population membership (Pop) or LFA as an offset.
-In these plots we are comparing the deviance from the null model in the 24,390 variants identified using the LFA model.}  
+In these plots we are comparing the deviance from the null model in the 24,390 variants identified using the LFA model. \sgcomment{label axes}}  
 \label{CompareModel}
 \end{figure}
 
-\renewcommand{\thefigure}{S\arabic{figure}}
-\setcounter{figure}{0}   	
+
 
 \begin{figure} \centering
     \begin{subfigure}[b]{\linewidth}
@@ -425,7 +425,7 @@ In these plots we are comparing the deviance from the null model in the 24,390 v
         \includegraphics[width=\hsize]{./Figures/QQPlot_NonRepeatSNPs.jpg}
         \label{fig:b}    
     \end{subfigure} 
-    \caption{\textbf{A} Manhattan plot of the -log10 p values for the reverse GWAS logistic regression analysis for SNPs in non repetitive regions. There are 15,018 SNPs that reach p values greater than $ p < 0.01$ after performing a two-stage Benjamini and Hochberg FDR adjustment.  The circles ( o ) are variants that reached values greater than 20, for clarity we implemented hard ceiling at 20. 
+    \caption{\textbf{A} Manhattan plot of the $-\log_{10}(p)$ values for the reverse GWAS logistic regression analysis for SNPs in non repetitive regions. There are 15,018 SNPs that reach $p$ values greater than $ p < 0.01$ after performing a two-stage Benjamini and Hochberg FDR adjustment.  The circles ( o ) are variants that reached values greater than 20, for clarity we implemented hard ceiling at 20. 
   \textbf{B} QQ plot of the unadjusted p values for the reverse GWAS logistic regression analysis for SNPs in non repetitive regions.}
   \label{NRS_Manhattan}
   \end{figure}
@@ -441,7 +441,7 @@ In these plots we are comparing the deviance from the null model in the 24,390 v
         \includegraphics[width=\hsize]{./Figures/QQPlot_NonRepeatIndels.jpg}
         \label{fig:b}    
     \end{subfigure} 
-    \caption{\textbf{A} Manhattan plot of the -log10 p values for the reverse GWAS logistic regression analysis for INDELs in non repetitive regions. There are 2,121 INDELs that reach p values greater than $ p < 0.01$ after performing a two-stage Benjamini and Hochberg FDR adjustment.  The circles ( o ) are variants that reached values greater than 20, for clarity we implemented hard ceiling at 20. 
+    \caption{\textbf{A} Manhattan plot of the $-\log_{10}(p)$ values for the reverse GWAS logistic regression analysis for INDELs in non repetitive regions. There are 2,121 INDELs that reach $p$ values greater than $ p < 0.01$ after performing a two-stage Benjamini and Hochberg FDR adjustment.  The circles ( o ) are variants that reached values greater than 20, for clarity we implemented hard ceiling at 20. 
   \textbf{B} QQ plot of the unadjusted p values for the reverse GWAS logistic regression analysis for INDELs in non repetitive regions.}
   \label{NRI_Manhattan}
   \end{figure}
@@ -457,7 +457,7 @@ In these plots we are comparing the deviance from the null model in the 24,390 v
         \includegraphics[width=\hsize]{./Figures/QQPlot_RepeatSNPs.jpg}
         \label{fig:b}    
     \end{subfigure} 
-    \caption{\textbf{A} Manhattan plot of the -log10 p values for the reverse GWAS logistic regression analysis for SNPs in repetitive regions. There are 4,405 SNPs that reach p values greater than $ p < 0.01$ after performing a two-stage Benjamini and Hochberg FDR adjustment.  The circles ( o ) are variants that reached values greater than 20, for clarity we implemented hard ceiling at 20. 
+    \caption{\textbf{A} Manhattan plot of the $-\log_{10}(p)$ values for the reverse GWAS logistic regression analysis for SNPs in repetitive regions. There are 4,405 SNPs that reach $p$ values greater than $ p < 0.01$ after performing a two-stage Benjamini and Hochberg FDR adjustment.  The circles ( o ) are variants that reached values greater than 20, for clarity we implemented hard ceiling at 20. 
   \textbf{B} QQ plot of the unadjusted p values for the reverse GWAS logistic regression analysis for SNPs in repetitive regions.}
   \label{RS_Manhattan}
   \end{figure}
@@ -473,7 +473,7 @@ In these plots we are comparing the deviance from the null model in the 24,390 v
         \includegraphics[width=\hsize]{./Figures/QQPlot_RepeatIndels.jpg}
         \label{fig:b}    
     \end{subfigure} 
-    \caption{\textbf{A} Manhattan plot of the -log10 p values for the reverse GWAS logistic regression analysis for INDELs in repetitive regions. There are 642 INDELs that reach p values greater than $ p < 0.01$ after performing a two-stage Benjamini and Hochberg FDR adjustment.  The circles ( o ) are variants that reached values greater than 20, for clarity we implemented hard ceiling at 20. 
+    \caption{\textbf{A} Manhattan plot of the $-\log_{10}(p)$ values for the reverse GWAS logistic regression analysis for INDELs in repetitive regions. There are 642 INDELs that reach $p$ values greater than $ p < 0.01$ after performing a two-stage Benjamini and Hochberg FDR adjustment.  The circles ( o ) are variants that reached values greater than 20, for clarity we implemented hard ceiling at 20. 
   \textbf{B} QQ plot of the unadjusted p values for the reverse GWAS logistic regression analysis for INDELs in repetitive regions.}
   \label{RI_Manhattan}
   \end{figure}
@@ -482,8 +482,8 @@ In these plots we are comparing the deviance from the null model in the 24,390 v
 \begin{figure}[h]
 \centering
 \includegraphics[width=12cm,keepaspectratio]{./Figures/Han_1kGP_SFS_singlePop.jpg}
-\caption{Site frequency spectrum plot comparing the original 1kGP data to the high depth resequence data. This plot only shows significant SNPs identified in the single population tests of CHS and CHB populations. Only 9 of the 296 significant SNPs identified in the resequenced Han samples \citep{Lan2017}.
-Because the resequencing did not include all the individuals from the original 1kGP dataset, we downsampled the data to match the resequenced individuals.}  
+\caption{Site frequency spectrum plot comparing the original 1kGP data to the high depth resequence data. This plot only shows significant SNPs identified in the single population tests of CHS and CHB populations. Only 9 of the 296 significant SNPs identified in the resequenced Han samples \citep{Lan2017} \sgcomment{missing a verb?}.
+Because the resequencing did not include all the individuals from the original 1kGP dataset, we downsampled the data to match the resequenced individuals. \sgcomment{This caption could be clarified a lot!}}  
 \label{90HanSFS}
 \end{figure}
 
@@ -492,14 +492,14 @@ Because the resequencing did not include all the individuals from the original 1
 \includegraphics[width=12cm,keepaspectratio]{./Figures/Han_1kGP_SFS_FullModel.jpg}
 \caption{Site frequency spectrum plot comparing the original 1kGP data to the high depth resequenced data. 
 This plot shows  12,086 significant variants identified in the reverse GWAS model including all populations.
- Only 1,637 of the variants are present in the high depth resequenced individuals.}  
+ Only 1,637 of the variants are present in the high depth resequenced individuals. \sgcomment{This caption could be clarified to be more self-contained}}  
 \label{90HanSFS_30}
 \end{figure}
 
 \begin{figure}[h]
 \centering
 \includegraphics[width=15cm,keepaspectratio]{./Figures/Published_OverUnder30.jpg}
-\caption{Site frequency spectrum plot comparing the frequency of suspicious variants identified in publications, for individuals with $Q$ scores above and below 30. The black dashed lines indicates equal allele frequencies while the red dotted line for variants twice as frequent in individuals with $Q$ scores below 30. Each of the rsIDs of the variants are labelled for clarity.}  
+\caption{Site frequency spectrum plot comparing the frequency of suspicious \sgcomment{Make sure suspicious is defined throughout} variants identified in publications, for individuals with $Q$ scores above and below 30. The black dashed lines indicates equal allele frequencies while the red dotted line for variants twice as frequent in individuals with $Q$ scores below 30. Each of the rsIDs of the variants are labelled for clarity.}  
 \label{Pub_30}
 \end{figure}
 
@@ -514,7 +514,7 @@ This plot shows  12,086 significant variants identified in the reverse GWAS mode
 \includegraphics[width=\hsize,keepaspectratio]{./Figures/Omni_AF.jpg}
 \caption{We found that 613 of the variants we identified as being associated to $Q$ were present on Illumina's Omni 2.5 chip. 
 This does not mean that these variants are false positives, but rather, that in the 1kGP, individuals with low $Q$ were less likely to be called as having a variant in that position. 
-Moreover, using the 1kGP as a reference panel might impact the population allele frequencies observed for these positions.}
+Moreover, using the 1kGP as a reference panel might impact the population allele frequencies observed for these positions. \sgcomment{This is a bit too much interpretation and redundant with the main text (also, not clear how the figure relates to caption)}}
 \label{Omni}
 \end{figure}
 
@@ -527,7 +527,7 @@ Moreover, using the 1kGP as a reference panel might impact the population allele
 \begin{figure}[h]
 \includegraphics[width=\hsize,keepaspectratio]{./Figures/MutationSpectrum_cutOff.png}
 \caption{\textbf{A} 
-The  *AC${\rightarrow}$*CC mutational signature in JPT remains despite removing variants associated to quality. 
+The  *AC${\rightarrow}$*CC mutational signature in JPT remains despite removing variants associated to quality. \sgcomment{Also show original?}
 \textbf{B} 
 Removing individuals with average quality per mapped bases $Q$ below a threshold of 30 removes the mutational signature completely. }
 \label{MutSpect}
