--- a/PlottingScripts/RegressionResults.Rmd
+++ b/PlottingScripts/RegressionResults.Rmd
@@ -24,6 +24,7 @@ library(ggplot2)
 library(multtest)
 library(cowplot)
 library(reshape2)
+library(tidyr)
 
 #Directories
 DataPath <- '~/Documents/QualityPaper/ProcessedData/'
@@ -146,6 +147,15 @@ write.table(Regression[which(
             quote = FALSE,
             row.names = FALSE,
             col.names = FALSE,
+            sep = '\t')
+
+write.table(Regression[which(
+            Regression$Adjusted_Log10p 
+            > -log10(0.01)),c('Chr','Pos','rsID','b','Adjusted_Log10p')], 
+            file = paste0(DataPath, 
+                          'Significant_Positions_and_Pvals.txt'),
+            quote = FALSE,
+            row.names = FALSE,
             sep = '\t')
 ```
 
@@ -310,3 +320,148 @@ table <- catalog[which(catalog$log10P_0.01 > -log10(0.01)),
 print(table[order(-Adjusted_Log10p),])
 ```
 
+##Density of Significant SNPs per Chromosome
+```{r}
+sigPerChrom <- as.data.frame(table(Regression[which(Regression$Adjusted_Log10p > -log10(0.01)),]$Chr))
+PerChrom <- as.data.frame(table(Regression$Chr))
+sigPerChrom <- merge(sigPerChrom, PerChrom, by='Var1')
+sigPerChrom$density <- sigPerChrom$Freq.x/sigPerChrom$Freq.y
+
+ggplot(sigPerChrom, 
+       aes(x=Var1,y=density))+
+  geom_bar(stat="identity")+
+  labs(x='Chromsome',
+       y='proportion of significant variants')
+
+ChromLength <- fread(paste0(DataPath,
+                            'GRCh37_ChromLength.txt'),
+                     sep='\t',
+                     col.names = c('Chr','Length'))
+plts <- list()
+bins <- list()
+for(chrom in seq(1,22,1)){
+  print(chrom)
+  df <- Regression[which((Regression$Chr == chrom) &
+                           (Regression$Adjusted_Log10p 
+                            > -log10(0.01))),
+                   c('Chr','Pos')]
+  l = ChromLength[which(ChromLength$Chr == chrom),
+                  c('Length')][[1]]
+  b = seq(1,l,by=10000)
+  if(chrom == 1){
+    plts[[chrom]]<-ggplot(df, aes(x=Pos)) +
+    geom_freqpoly(breaks = b) +
+    ylim(0,80)+
+    theme(axis.text.x = element_blank(),
+          axis.ticks.x = element_blank(),
+          axis.line = element_blank(),
+          plot.margin = margin(0,0,0,0),
+          axis.text=element_text(size=6),
+          axis.title=element_text(size=8)) + 
+    labs(x=chrom,y='Significant variants per 10kb window')
+  }
+  else{
+  plts[[chrom]]<-ggplot(df, aes(x=Pos)) +
+    geom_freqpoly(breaks = b) +
+    ylim(0,80)+
+    theme(axis.text = element_blank(),
+          axis.ticks = element_blank(),
+          axis.title.y = element_blank(),
+          axis.line = element_blank(),
+          plot.margin = margin(0,0,0,0),
+          axis.title=element_text(size=8)) + 
+    xlab(chrom)
+  }
+  #get freq count per bin
+  c <- cut(df$Pos, breaks = b)
+  bins[[chrom]] <- as.data.frame(table(c))
+}
+
+relWidths <- unlist(ChromLength$Length)/100000000
+relWidths[[1]] <- relWidths[[1]]*1.5
+p <- plot_grid(plts[[1]],plts[[2]],plts[[3]],plts[[4]],plts[[5]],plts[[6]],plts[[7]],plts[[8]],plts[[9]],plts[[10]],plts[[11]],plts[[12]],plts[[13]],plts[[14]],plts[[15]],plts[[16]],plts[[17]],plts[[18]],plts[[19]],plts[[20]],plts[[21]],plts[[22]],nrow=1,rel_widths = relWidths)
+
+ggsave(paste0(figurePath,
+                'VariantDensity.jpg'), 
+       height=5, 
+       width=10)
+
+#get 10kb regions with more than 10 sig snps
+over10  <- bins %>%
+   bind_rows(.id = "source") %>%
+   filter(Freq > 10) %>%
+   separate(c, c("start_bp", "end_bp"), ",")
+
+over10$start_bp <- as.numeric(as.character(substring(over10$start_bp,2)))
+over10$end_bp <- as.numeric(as.character(substring(over10$end_bp,1,
+                                                    nchar(over10$end_bp)-1)))
+
+names(over10)[c(1,4)]<-c('Chr','Freq_Sig_Var')
+write.table(over10,
+            file = paste0(DataPath,
+                          'RegionsOver10.bed'),
+            row.names = FALSE, 
+            quote = FALSE,
+            sep = '\t')
+
+ makeSubPlot <- function(df,Name){
+ggplot(df, 
+       aes(x=Pos, 
+           y = Adjusted_Log10p))+
+  geom_point(size = 1) +
+  expand_limits(y=c(0,max(df$Adjusted_Log10p)+1))  +
+  geom_hline(yintercept = -log10(0.01), 
+             color = 'blue') +
+  labs(y = '-log10(p)', 
+       title = Name) +
+  theme_classic() +
+  theme(plot.title = element_text(hjust = 0.5), 
+        axis.text.x = element_blank(), 
+        axis.ticks.x = element_blank())
+
+dir=paste0(figurePath,
+              'Sub_Regions/Sub_ManhattanPlot_')
+ggsave(paste(dir,Name,'.jpg',sep=''), height=5, width=10)
+}
+
+ sub <- list()
+ plt_sub <- list()
+ for(i in seq(1,nrow(over10))){
+   chr <- over10[i,]$Chr
+   start <- over10[i,]$start_bp
+   end <- over10[i,]$end_bp
+   title <- paste0('Chr',chr, ':',start,'-',end)
+   sub[[i]] <- Regression[which((Regression$Chr == chr) &
+                              (Regression$Pos > start) &
+                              (Regression$Pos < end)),
+                              c('Chr','Pos','rsID',
+                                'Adjusted_Log10p',
+                                'Repeat','Indel')]
+   makeSubPlot(sub[[i]],title)
+ }
+
+ library(Homo.sapiens)
+ library(annotate)
+ mycoords.gr = over10 %>%
+   dplyr::select(chrom=Chr, start=start_bp, end=end_bp) %>%
+   mutate(chrom=paste0('chr', chrom)) %>%
+   makeGRangesFromDataFrame
+ 
+ GeneRegsions <- subsetByOverlaps(genes(TxDb.Hsapiens.UCSC.hg19.knownGene), mycoords.gr)
+ 
+out <- data.frame(seqnames=seqnames(GeneRegsions),
+  starts=start(GeneRegsions)-1,
+  ends=end(GeneRegsions),
+  names=c(rep(".", length(GeneRegsions))),
+  scores=c(rep(".", length(GeneRegsions))),
+  strands=strand(GeneRegsions),
+  gene_id=GeneRegsions$gene_id,
+  gene_symbol=getSYMBOL(as.character(unlist(out$gene_id)), 
+                        data='org.Hs.eg'))
+
+write.table(out, file = paste0(DataPath,
+                          'RegionsOver10_geneID.bed'), 
+                          quote=F, 
+                          sep="\t", 
+                          row.names=F)
+```
